<resources>
    <string name="toast_dblclick_back_pressed">再按一下返回到桌面</string>
    <string name="cancle_app_download">取消下载</string>
    <string name="no_net_work">当前网络不可用，请检查网络设置！</string>
    <string name="app_name">特秀美妆</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="merchant">秀坊</string>
    <string name="special_show_circle">特秀圈</string>
    <string name="find">发现</string>
    <string name="chat">聊天</string>
    <string name="my">我的</string>
    <string name="send_show_card_tv_show">要秀卡</string>
    <string name="send_loiter_card_tv_show">要蹭卡</string>
    <string name="send_dynamic_tv_show">发状态</string>
    <string name="title_activity_special_show_circle">SpecialShowCircleActivity</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_extra">ExtraActivity</string>
    <string name="title_activity_select_send_type">SelectSendTypeActivity</string>
    <string name="title_activity_send_card">SendCardActivity</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="album_no_data_show">相册没有图片</string>
    <string name="album_preview">预览</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="input_phonenumber">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="getback_password">忘记密码？</string>
    <string name="immade_register">立即注册</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="input_eleven_phonenumber">请输入11位手机号</string>
    <string name="get_sms_code">发送验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_six_sixteen_password">请输入密码</string>
    <string name="input_reenter_password">请重新设置密码</string>
    <string name="agree">同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="register">注册</string>
    <string name="complete">完成</string>
    <string name="my_integral">积分商城</string>
    <string name="focus_on">关注：</string>
    <string name="fans">粉丝：</string>
    <string name="friends">好友：</string>
    <string name="coupon">优惠劵</string>
    <string name="invite_awards">邀请有奖</string>
    <string name="my_activities">我的活动</string>
    <string name="latest_dynamic">最新动态</string>
    <string name="my_topic">我的话题</string>
    <string name="photo_albums_dynamic">我的动态</string>
    <string name="my_reservation">我的预约</string>
    <string name="look_my_reservation">查看我的预约</string>
    <string name="submit_booking">您的预约申请已提交\n请耐心等商户的受理</string>
    <string name="sms_to_clear">商户受理后我们会用短信的方式通知您</string>
    <string name="shop_center">商户中心</string>
    <string name="apply_merchant">申请成为商户</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_invite">我的邀请</string>
    <string name="invite_record">邀请记录</string>
    <string name="my_two_code">我的二维码</string>
    <string name="invite_agent">邀请成为代理</string>
    <string name="my_message">我的消息</string>
    <string name="my_invite_introduce_title">备注说明</string>
    <string name="my_invite_introduce">欢迎加入特秀网，来到这个网站</string>
    <string name="craftsman">我是手艺人</string>
    <string name="business_card">名片</string>
    <string name="works">作品</string>
    <string name="home_page">主页</string>
    <string name="title_activity_basic_information">BasicInformationActivity</string>
    <string name="basic_information">基本资料</string>
    <string name="head_portrait">头像:</string>
    <string name="nickname">昵称:</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="sex">性别:</string>
    <string name="birthday">生日:</string>
    <string name="often_in">常居地:</string>
    <string name="signature">签名:</string>
    <string name="introduce_hint">写点有趣的自我介绍,请勿广告</string>
    <string name="title_activity_business_card_information">BusinessCardInformationActivity</string>
    <string name="business_card_information">名片信息</string>
    <string name="head_icon_hint">上传本人的清晰头像</string>
    <string name="show_fang">所属秀坊:</string>
    <string name="designation">名称:</string>
    <string name="title">头衔:</string>
    <string name="designation_hint">填写您名片上的名字</string>
    <string name="title_hint">填写您名片上的职位</string>
    <string name="working_time">从业时间:</string>
    <string name="good_at">擅长:</string>
    <string name="brief_introduction">简介:</string>
    <string name="brief_introduction_hint">请从入行时间、从业经历、技术特点等方面介绍自己</string>
    <string name="title_activity_image_file">ImageFileActivity</string>
    <string name="title_activity_show_all_photo">ShowAllPhotoActivity</string>
    <string name="title_activity_my_work">MyWorkActivity</string>
    <string name="title_activity_add_work">AddWorkActivity</string>
    <string name="title_activity_upload_work">UploadWorkActivity</string>
    <string name="title_activity_gallery_work">GalleryWorkActivity</string>
    <string name="net_work_error">网络连接错误，请重试！</string>
    <string name="net_server_error">获取数据失败,请重试!</string>
    <string name="no_data_search">没有搜索到相关秀坊</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_full">已加载全部</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_select_store">SelectStoreActivity</string>
    <string name="title_activity_select_label">SelectLabelActivity</string>
    <string name="title_activity_getback_pass">GetbackPassActivity</string>
    <string name="title_activity_appointment_release">AppointmentReleaseActivity</string>
    <string name="title_activity_circle_dynamic">CircleDynamicActivity</string>
    <string name="title_activity_circle_nearby">CircleNearbyActivity</string>
    <string name="merchant_list">列表</string>
    <string name="merchant_map">地图</string>
    <string name="circle_nearby">附近</string>
    <string name="circle_dynamic">动态</string>
    <string name="circle_nearby_show_visitor">秀客</string>
    <string name="circle_nearby_show_lane">秀坊</string>
    <string name="circle_nearby_craftsman">手艺人</string>
    <string name="title_activity_stores_details">StoresDetailsActivity</string>
    <string name="show_card">秀卡</string>
    <string name="ceng_card">蹭卡</string>
    <string name="review">点评</string>
    <string name="collection">收藏</string>
    <string name="address">地址:</string>
    <string name="phone">电话:</string>
    <string name="activity">活动列表</string>
    <string name="iphone">手机:</string>
    <string name="opening_time">营业时间:</string>
    <string name="monetary">消费总额</string>
    <string name="consume_tips">消费提示</string>
    <string name="confirm_pay">确认支付</string>
    <string name="submit">提交</string>
    <string name="pay_way">选择支付方式</string>
    <string name="pay_integral">线下支付</string>
    <string name="pay_wx">微信支付</string>
    <string name="pay_alipay">支付宝</string>
    <string name="consume_introduction">您可以使用积分和在线支付进行消费，在线支付消费可以累积积分</string>
    <string name="show_fang_introduction">秀坊简介</string>
    <string name="branch_stores">分店:</string>
    <string name="related_services">相关服务(0)</string>
    <string name="reservation">预约</string>
    <string name="craftsman_people">手艺人(0)</string>
    <string name="input_show_fang_hint">请输入商家名称或地址</string>
    <string name="title_activity_switch_city">SwitchCityActivity</string>
    <string name="input_city_or_pinyin">请输入城市或拼音</string>
    <string name="no_search_city">抱歉,暂时没有找到相关城市</string>
    <string name="title_activity_service_list">ServiceListActivity</string>
    <string name="title_activity_service_introduce">ServiceIntroduceActivity</string>
    <string name="des_show">服务说明</string>
    <string name="appointment_immediately">立即预约</string>
    <string name="title_activity_craftsman">CraftsmanActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="switch_service">选择服务:</string>
    <string name="time">时间:</string>
    <string name="people_num">人数:</string>
    <string name="switch_craftsman_people">手艺人:</string>
    <string name="name">姓名:</string>
    <string name="contact">联系方式:</string>
    <string name="remark">备注:</string>
    <string name="input_name">请输入您的姓名</string>
    <string name="other_requre_service">对服务的其他要求(选填)</string>
    <string name="free_order">免费预约</string>
    <string name="title_activity_select_service">SelectServiceActivity</string>
    <string name="other_service">其他服务</string>
    <string name="title_activity_select_craftsman">SelectCraftsmanActivity</string>
    <string name="title_activity_image_show">ImageShowActivity</string>
    <string name="title_activity_dynamic_image_pager">DynamicImagePagerActivity</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="title_activity_circle_dynamic_detail">CircleDynamicDetailActivity</string>
    <string name="title_activity_shower_details">ShowerDetailsActivity</string>
    <string name="personalized_signature">个性签名:</string>
    <string name="interested_signing">兴趣标签:</string>
    <string name="card_information">名片信息</string>
    <string name="position">职位:</string>
    <string name="shops_located">入住店铺:</string>
    <string name="title_activity_atten_fans_peo">AttenFansPeoActivity</string>
    <string name="title_activity_craftsman_details_">Craftsman_details_Activity</string>
    <string name="title_activity_one_image_show">OneImageShowActivity</string>
    <string name="title_activity_shop_detail">ShopDetailActivity</string>
    <string name="title_activity_my_booking">MyBookingActivity</string>
    <string name="title_activity_reser_details">ReserDetailsActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="finish_login">退出登录</string>
    <string name="clear_data">清除缓存</string>
    <string name="my_info">我的资料</string>
    <string name="system_information">系统消息</string>
    <string name="login_password">登录密码</string>
    <string name="modify">修改</string>
    <string name="payment_code">支付密码</string>
    <string name="security_center">安全中心</string>
    <string name="abouts_us">关于我们</string>
    <string name="title_activity_order_success">OrderSuccessActivity</string>
    <string name="title_activity_albums_dynamic">Albums_dynamicActivity</string>
    <string name="title_activity_my_collect">MyCollectActivity</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_business_center">BusinessCenterActivity</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice">声音</string>
    <string name="voice_call">[语音通话]</string>
    <string name="myfriend">我的好友</string>
    <string name="invite_friend">邀请好友</string>
    <string name="nearby_show_visitor">附近秀客</string>
    <string name="addfriend">添加好友</string>
    <string name="input_set_trading_password">请输入支付密码</string>
    <string name="input_again_set_trading_password">请确认支付密码</string>
    <string name="confirm">确认</string>
</resources>