<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@color/color_ffffff"
	android:orientation="vertical"
    tools:context=".GetbackPassActivity" >
        <include 
        layout="@layout/view_common_head"
        android:visibility="gone"
        />
                <LinearLayout 
        android:onClick="goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        >
    <TextView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/icon_cancel"
        />
    </LinearLayout>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getback_password"
        android:layout_gravity="center"
        android:textColor="@color/color_F47183"
        android:textSize="@dimen/text_size_36px"
        />
	<RelativeLayout
	    android:layout_marginLeft="@dimen/text_size_36px"
	    android:layout_marginRight="@dimen/text_size_36px"
	    android:layout_marginTop="@dimen/text_size_48px"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/text_size_90px"
	    >
	
	    <com.show.specialshow.utils.ClearEditText
	        android:id="@+id/getback_pass_phonenumber"
	        android:inputType="number"
	       
			style="@style/edittext_custom"
			android:hint="@string/input_eleven_phonenumber"
			android:paddingRight="@dimen/text_size_16px"
	        />
	    
	</RelativeLayout>
	<View 
	    style="@style/line_view"
	    />
		<RelativeLayout
		    	android:layout_marginLeft="@dimen/text_size_36px"
	    android:layout_marginRight="@dimen/text_size_36px"
	    android:layout_width="fill_parent"
	    android:layout_height="@dimen/text_size_90px"
	    android:layout_marginTop="@dimen/text_size_24px"
	    >
	        <Button 
	             android:paddingLeft="5dp"
	    	    android:paddingRight="5dp"
	    	    android:paddingTop="3dp"
	    	    android:paddingBottom="3dp"
	        android:onClick="onClick"
	        android:id="@+id/getback_pass_sms_code"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/get_sms_code"
	        android:background="@drawable/bg_sms_code"
	        android:textColor="@color/color_F47183"
	        android:textSize="@dimen/text_size_24px"
	        />
	<com.show.specialshow.utils.ClearEditText
	    android:inputType="number"
	    android:id="@+id/getback_pass_code"
	     android:layout_toLeftOf="@id/getback_pass_sms_code"
	    style="@style/edittext_custom"
	    android:hint="@string/input_code"
	    />
	</RelativeLayout>
		<View 
	    style="@style/line_view"
	    />
	<com.show.specialshow.utils.ClearEditText
	    android:id="@+id/getback_pass_password"
	    android:password="true"
	    style="@style/edittext_custom"
	   	android:layout_marginLeft="@dimen/text_size_36px"
	    android:layout_marginRight="@dimen/text_size_36px"
	    android:layout_marginTop="@dimen/text_size_24px"
	    android:hint="@string/input_reenter_password"
	    />
		<View 
	    style="@style/line_view"
	    />

		<Button 
		    android:enabled="false"
	    android:onClick="onClick"
	    android:id="@+id/getback_pass_finish"
	    android:layout_marginTop="@dimen/text_size_114px"
	    android:layout_width="match_parent"
	    android:layout_height="@dimen/text_size_90px"
	    android:background="@drawable/button_login"
	    android:layout_marginLeft="@dimen/text_size_68px"
	    android:layout_marginRight="@dimen/text_size_68px"
	    android:text="@string/finish"
	    android:textColor="@color/color_ffffff"
	    android:textSize="@dimen/text_size_26px"
	    />


</LinearLayout>
