<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical"
    tools:context=".activity.SetTradingPasswordActivity" >

    <include layout="@layout/view_common_head" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/ling_0.5"
        android:background="@color/umeng_comm_color_ca" />


    <EditText
        android:id="@+id/input_set_trading_password"
        style="@style/edittext_custom"
        android:layout_marginTop="@dimen/text_size_26px"
        android:background="@color/app_bg"
        android:hint="@string/input_set_trading_password"
        android:paddingLeft="@dimen/text_size_48px"
        android:password="true" />

    <View style="@style/line_view1" />

    <EditText
        android:paddingLeft="@dimen/text_size_48px"
        android:background="@color/app_bg"
        android:id="@+id/input_again_set_trading_password"
        style="@style/edittext_custom"
        android:layout_marginTop="@dimen/text_size_26px"
        android:hint="@string/input_again_set_trading_password"
        android:password="true" />
    
    <View style="@style/line_view1" />




    <Button
        android:id="@+id/set_trading_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size_90px"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/text_size_86px"
        android:layout_marginRight="@dimen/text_size_86px"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_login"
        android:enabled="false"
        android:onClick="onClick"
        android:text="@string/confirm"
        android:textColor="@color/color_ffffff" />

</LinearLayout>