<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_bg"
    tools:context="com.show.specialshow.activity.MyInviteActivity">
    <include
        layout="@layout/view_common_head"
        />
    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/img_invite_banner"
        android:scaleType="fitXY"
        android:layout_marginBottom="@dimen/text_size_36px"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.8dp"
        android:background="@color/app_line_bg"
        />
    <RelativeLayout
        android:layout_height="45dp"
        android:id="@+id/rl_invite_record"
        style="@style/user_info_container" >
        <TextView
            android:textColor="@color/color_656565"
            style="@style/user_info_tv"
            android:text="@string/invite_record" />

        <ImageView
            android:id="@+id/invite_record_iv_right_iv"
            style="@style/list_menu_next" />
        <ImageView style="@style/user_info_split" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_height="45dp"
        android:id="@+id/rl_my_two_code"
        style="@style/user_info_container" >
        <TextView
            android:textColor="@color/color_656565"
            style="@style/user_info_tv"
            android:text="@string/my_two_code" />

        <ImageView
            android:id="@+id/my_two_code_iv_right_iv"
            style="@style/list_menu_next" />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.8dp"
        android:background="@color/app_line_bg"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="@dimen/text_size_16px"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="18dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_28px"
            android:text="@string/my_invite_introduce_title"
            android:textColor="@color/color_656565" />

        <TextView
            android:text="@string/my_invite_introduce"
            android:id="@+id/my_invite_introduce_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size_26px"
            android:textColor="@color/color_656565"
             />
    </LinearLayout>

</LinearLayout>
